--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.title, .subtitle {
+.title, .subtitle, .result {
   text-align: center;
 }
 .container {
@@ -12,4 +12,8 @@
 }
 .box {
   cursor: pointer;
+  transition: 0.2s ease-in;
+}
+.box:hover {
+  transform: scale(1.2);
 }
